@@ -791,7 +791,7 @@ if { [istarget mips*-*-vxworks*] } {
         run_dump_test "mips16e-jrc"
         run_dump_test "mips16e-save"
         run_dump_test "mips16e-64"
-        run_list_test "mips16e-64" "-march=mips32"
+        run_list_test "mips16e-64" "-march=mips32 -32"
     }
     run_dump_test "vxworks1"
     run_dump_test "vxworks1-xgot"
